log
Thu Mar 26 06:58:01 PM UTC 2026: 
 tests:  0|6
total_score: 0/60
62ba1a4
Thu Mar 26 07:07:24 PM UTC 2026: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/60
9860bfa
Thu Mar 26 07:07:57 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:36:6: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   36 |     L->head = NULL;
      |      ^~
list.c:35:23: note: object of size 8 allocated by ‘malloc’
   35 |     List* L = (List*) malloc(sizeof(List*));
      |                       ^~~~~~~~~~~~~~~~~~~~~
list.c:37:6: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   37 |     L->tail = NULL;
      |      ^~
list.c:35:23: note: object of size 8 allocated by ‘malloc’
   35 |     List* L = (List*) malloc(sizeof(List*));
      |                       ^~~~~~~~~~~~~~~~~~~~~
list.c:38:6: error: array subscript ‘List {aka struct List}[0]’ is partly outside array bounds of ‘unsigned char[8]’ [-Werror=array-bounds=]
   38 |     L->current = NULL;
      |      ^~
list.c:35:23: note: object of size 8 allocated by ‘malloc’
   35 |     List* L = (List*) malloc(sizeof(List*));
      |                       ^~~~~~~~~~~~~~~~~~~~~
cc1: all warnings being treated as errors
2dbedb9
Thu Mar 26 07:08:26 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
117ce31
Thu Mar 26 07:09:34 PM UTC 2026: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/60
47edbc5
Thu Mar 26 07:13:32 PM UTC 2026: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  0|0
a6c1e3b
Thu Mar 26 07:15:24 PM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:17: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   51 |     void* num = current->data;
      |                 ^~~~~~~
      |                 popCurrent
list.c:51:17: note: each undeclared identifier is reported only once for each function it appears in
cffafc6
